# walletd_icp_api

./: .gitattributes  .gitignore.bak  Cargo.toml  audit_inquiry.txt  deps.txt  dfx.json.bak  forum_post.md  grok_response.txt  ledger_init_args.did  ledger_init_args.json  serde_monero_deps.txt  test_grok_api.pcd  test_grok_api.py
.dfx/local/: canister_ids.json  wallets.json
.dfx/local/canisters/walletd_icp_api/: index.js  init_args.txt  service.did  service.did.d.ts  service.did.js
.dfx/network/local/: ic-canister-http-config.json  ic-canister-http-socket-path  network-id  pid  pocket-ic-pid  pocket-ic-port  pocket-ic-proxy-pid  pocket-ic-proxy-port  replica-effective-config.json  webserver-port
.dfx/network/local/state/replicated_state/: registry.proto
.dfx/network/local/state/replicated_state/053cb6e7b2a60fe16d7b76945e5c4c43cebde8fca019b07df8f3a44ae0357157/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/053cb6e7b2a60fe16d7b76945e5c4c43cebde8fca019b07df8f3a44ae0357157/checkpoints/000000000003f3b8/: system_metadata.pbuf
.dfx/network/local/state/replicated_state/053cb6e7b2a60fe16d7b76945e5c4c43cebde8fca019b07df8f3a44ae0357157/tip/canister_states/ffffffffff9000000101/: 00000000000001c2_0000_vmemory_0.overlay  software.wasm
.dfx/network/local/state/replicated_state/053cb6e7b2a60fe16d7b76945e5c4c43cebde8fca019b07df8f3a44ae0357157/tip/canister_states/ffffffffff9000020101/: software.wasm
.dfx/network/local/state/replicated_state/06f38c411b0309a4edfd1db113fe6e3177127489cdce83d6f5cd31a64cc1e78e/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/06f38c411b0309a4edfd1db113fe6e3177127489cdce83d6f5cd31a64cc1e78e/checkpoints/000000000003f3b8/: system_metadata.pbuf
.dfx/network/local/state/replicated_state/3e7ee4083b8cb066e81bea41046a791f8b9c457d58bd5b54f6d5d1fbb26fe566/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/3e7ee4083b8cb066e81bea41046a791f8b9c457d58bd5b54f6d5d1fbb26fe566/checkpoints/000000000003f548/: system_metadata.pbuf
.dfx/network/local/state/replicated_state/46bab453650b3f22d11f0ffe4d3057b855dd752f95eeccc69da5531e94598e2b/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/46bab453650b3f22d11f0ffe4d3057b855dd752f95eeccc69da5531e94598e2b/checkpoints/000000000003f548/: system_metadata.pbuf
.dfx/network/local/state/replicated_state/7ddbdfe2569f6c797ad88468d9271d537bd977a18853897a95afae887484b070/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/7ddbdfe2569f6c797ad88468d9271d537bd977a18853897a95afae887484b070/checkpoints/000000000003f548/: system_metadata.pbuf
.dfx/network/local/state/replicated_state/f6a7a16e48b7dd209eff86713239c20949bd7b1a872ff49f9a294a24e361ac93/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/f6a7a16e48b7dd209eff86713239c20949bd7b1a872ff49f9a294a24e361ac93/checkpoints/000000000003f3b8/: system_metadata.pbuf
coins/bitcoin/: Cargo.toml
coins/hedera/: Cargo.toml
coins/monero/: Cargo.toml
coins/monero/src/: lib.rs  monero_wallet.rs
crates/walletd-core/: Cargo.toml
crates/walletd_icp_api/: Cargo.toml
crates/walletd_icp_api/src/: lib.rs  lib.rs.bak
key_manager/hd_key/: Cargo.toml
key_manager/hd_key/src/: hd_key.rs
rates/: Cargo.toml
src/: lib.rs
walletd_icp_cli/: Cargo.toml
walletd_icp_cli/src/: cli_options.rs  display.rs  main.rs
(+8 files in other folders)
