[workspace]
members = [
    "walletd_icp_cli",
    "coins/bitcoin",
    "coins/monero",
    "coins/solana",
    "coins/ethereum",
    "coins/hedera",
    "key_manager/hd_key",
    "mnemonics/core",
    "mnemonics/monero",
    "rates",
    "crates/walletd-core",
    "crates/walletd_icp_api",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.130"

[patch.crates-io]
serde = { path = "vendor/serde/serde" }
serde-aux = { path = "vendor/serde-aux" }
reqwest = { path = "vendor/reqwest/reqwest" }