[package]
name = "walletd_rates"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The WalletD Team"]
description = "rates walletd library"
homepage = "https://walletd.org/"
repository = "https://github.com/walletd/walletd"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "walletd_rates"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0.40"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }  # Updated from 0.11.18
# Other dependencies unchanged