[package]
name = "walletd_icp_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
walletd_icp_api = { path = "../crates/walletd_icp_api" }
walletd_bitcoin = { path = "../coins/bitcoin", version = "0.2.0" }
walletd_monero = { path = "../coins/monero", version = "0.1.0" }
walletd_solana = { path = "../coins/solana", version = "0.2.0" }
walletd_ethereum = { path = "../coins/ethereum", version = "0.2.0" }
walletd_hedera = { path = "../coins/hedera", version = "0.2.0" }
anyhow = "1.0"
async-trait = "0.1"
cfonts = "1.1.0"
clap = { version = "4.0.18", features = ["cargo", "derive"] }
log = "0.4.17"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.130"
simple_logger = "4.1.0"
tokio = { version = "1.26.0", features = ["macros"] }
hex = "0.4.3"
ic-agent = "0.34.0"
candid = "0.10.13"

[lib]
name = "walletd_icp_cli"
path = "src/lib.rs"

[[bin]]
name = "walletd-icp-cli"
path = "src/main.rs"