[package]
name = "walletd_icp_api"
version = "0.1.0"
edition = "2021"
description = "Full ICP wallet integration for WalletD SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/walletd"

[dependencies]
candid = "0.10.13"
ic-cdk = "0.18.2-alpha.1"
ic-cdk-macros = "0.18.1"  # Updated from 0.18.2
ed25519-dalek = "2.1"
rand = "0.8"
bincode = "1.3"
hex = "0.4"
serde_bytes = "0.11"
sha2 = "0.10"
async-trait = "0.1"
getrandom = { version = "0.2", features = ["custom"] }
zeroize = "1.8"
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }

[lib]
crate-type = ["cdylib"]