[package]
name = "walletd_hd_key"
version = "0.2.0"
edition = "2021"

[dependencies]
walletd_mnemonics_core = { path = "../../mnemonics/core" }
secp256k1 = { version = "0.28", features = ["rand"] }
thiserror = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base58 = "0.2"
ripemd = "0.1"
serde = { version = "1.0.130", features = ["derive"] }

